<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HabTab2Fragment">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/cursoTecnicoTitulo"
        android:layout_marginTop="@dimen/distanciaTolBars"
        style="@style/titulosSkills"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/labelAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelano"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/titulosSobreMim"
            />
        <TextView
            android:layout_toEndOf="@id/labelAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cursoTecnicoAno"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <TextView
            android:id="@+id/labelDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelDescicao"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/titulosSobreMim"
            android:layout_below="@id/labelAno"
            />
        <TextView
            android:layout_below="@id/labelDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cursoTecnicoDescricao"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    </RelativeLayout>
<View
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/linhaSeparadoraOutras"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/curso_nivel_3_pag1" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/curso_nivel_3_pag2" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>